# CMAKETutorial

./: README.md
L002/source/: CMakeLists.txt  main.cpp
L005/source/: CMakeLists.txt  main.cpp
L005/source/include/: log.h
L005/source/src/: log.cpp  operations.cpp
L007/source/: CMakeLists.txt  CMakeLists1.txt  main.cpp
L007/source/include/: dog.h
L007/source/logger/src/: log.cpp
L007/source/src/: dog.cpp
L008/: CMakeLists.txt
L008/src/: main.cpp
L008/src/math/: supermath.cpp
L008/src/math/include/: supermath.h
L008/src/stats/: stats.cpp
L008/src/stats/include/: stats.h
